--- a/SolarCalculator/wwwroot/Anmelden.html
+++ b/SolarCalculator/wwwroot/Anmelden.html
@@ -66,18 +66,18 @@
 	<section class="center mt-3 " >
 		<form>
 			<div class="mb-3">
-			  <label for="exampleInputEmail1" class="form-label">Email address</label>
-			  <input type="email" class="form-control" id="Email" aria-describedby="emailHelp">
-			  <label for=""></label>
+				<label for="exampleInputEmail1" class="form-label">Email address</label>
+				<input type="email" class="form-control" id="Email" aria-describedby="emailHelp">
+				<label for=""></label>
 			</div>
 			<div class="mb-3">
-			  <label for="exampleInputPassword1" class="form-label">Password</label>
-			  <input type="password" class="form-control" id="Password">
+				<label for="exampleInputPassword1" class="form-label">Password</label>
+				<input type="password" class="form-control" id="Password">
 			</div>
-			
-			<button type="submit" class="btn btn-primary" id = "Einloggen">Einloggen</button>
+
+			<a id="Einloggen" class="btn btn-primary" href="#" role="button">Login</a>
 			<button type="submit" class="btn btn-success">Neu dabei</button>
-		  </form>
+		</form>
 
 		  <br>
 		  <div id="placeholderform">
